--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 identicon-*.tar
 
+# Ignore BEAM stuff
+*.beam
+
+# And this thing
+.elixir_ls/
